src/main/kube/test-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  labels:
    app: test-app
spec:
  replicas: 3
  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-app
        image: mcekovic/test-app:latest
        imagePullPolicy: Never
        resources:
          requests:
            cpu: 100m
            memory: 192Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        ports:
        - name: http
          containerPort: 8080
        - name: jmx
          containerPort: 9999
        volumeMounts:
        - name: test-app-logs
          mountPath: /app/logs
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/liveness
          initialDelaySeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/readiness
          initialDelaySeconds: 10
          timeoutSeconds: 5
        lifecycle:
          preStop:
            exec:
              command: [ "sh", "-c", "sleep 5" ]
      volumes:
      - name: test-app-logs
        emptyDir: {}
