src/main/kube/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-app
spec:
  containers:
    - name: test-app
      image: mcekovic/test-app:latest
      resources:
        requests:
          cpu: 100m
          memory: 192Mi
        limits:
          cpu: 1000m
          memory: 1Gi
      ports:
        - name: http
          containerPort: 8080
          protocol: TCP
      livenessProbe:
        httpGet:
          port: 8080
          path: /actuator/health/liveness
        initialDelaySeconds: 10
        timeoutSeconds: 5
      readinessProbe:
        httpGet:
          port: 8080
          path: /actuator/health/readiness
        initialDelaySeconds: 10
        timeoutSeconds: 5
