src/main/kube/test-service-mgmt.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service-mgmt
spec:
  type: LoadBalancer
  selector:
    app: test-app
  ports:
  - name: http
    port: 8080
    targetPort: http
  - name: jmx
    port: 8999
    targetPort: jmx
---
apiVersion: v1
kind: Service
metadata:
  name: test-service-mgmt2
spec:
  type: NodePort
  selector:
    app: test-app
  ports:
  - name: http
    port: 8080
    targetPort: http
    nodePort: 30080
  - name: jmx
    port: 9999
    targetPort: jmx
    nodePort: 30999
  externalTrafficPolicy: Local
