src/main/kube/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: ClusterIP
  selector:
    app: test-app
  ports:
  - name: http
    port: 8080
    targetPort: http
